src/Test/Fixtures/Good/TypeQualifier/affineScratchQubit.lf
let affine scratch q: qubit = qalloc();