src/Test/Fixtures/Bad/TypeQualifier/missingBindingNameAfterAffineScratch.lf
let affine scratch : qubit = qalloc();
